# sequence-vae

./: .gitignore  pyproject.toml
src/vae_names/: config.py  data.py  explore.py  model.py  train.py
